--- a/demos/app/app.component.css
+++ b/demos/app/app.component.css
@@ -2,7 +2,7 @@
     width: 3px;
     background: #E4E4E4;
 }
- 
+
 .aside ::-webkit-scrollbar-thumb {
     background: #EC6F74;
     border-radius: 0;
@@ -16,12 +16,13 @@
     right: 0;
     bottom: 0;
     left: 0;
+    overflow: hidden;
 }
 
 .content {
     position: relative;
     width: 100%;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 .aside {
