--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -183,7 +183,6 @@ $button-floating-width: em(56px) !default;
 $button-floating-height: $button-floating-width;
 $button-floating-shadow: $elevate-6 !default;
 $button-floating-hover-shadow: $elevate-12 !default;
-;
 $button-floating-background: $secondary-color !default;
 // Icon Buttons
 $button-icon-width: em(28px, 16px) !default;
@@ -225,40 +224,43 @@ $card-tgroup-margin: 0 em(16px);
 $card-transitions: box-shadow .3s cubic-bezier(.25, .8, .25, 1) !default;
 // 7. Calendar / Date Picker
 // Calendar Header
+$cal-border-radius: 4px !default;
 $cal-theme-color: $ocean-blue !default;
-$cal-header-year-fs: em(18px) !default;
-$cal-header-year-lh: em(22px);
-$cal-header-date-fs: em(38px);
-$cal-header-date-lh: em(45px);
-$cal-header-date-lsp: em(2px);
-$cal-header-bg: $cal-theme-color;
-$cal-header-color: $white;
-$cal-header-year-color: transparentize($cal-header-color, .2);
-$cal-header-padding: em(24px) em(16px);
+$cal-header-year-fs: em(18px, 16px) !default;
+$cal-header-year-lh: em(16px, 16px) !default;
+$cal-header-year-margin: 0 !default;
+$cal-header-date-fs: em(38px, 16px) !default;
+$cal-header-date-lh: em(16px, 16px) !default;
+$cal-header-date-lsp: 2px !default;
+$cal-header-date-margin: 0 !default;
+$cal-header-bg: $cal-theme-color !default;
+$cal-header-color: text-contrast($cal-theme-color) !default;
+$cal-header-year-color: transparentize($cal-header-color, .2) !default;
+$cal-header-padding: em(24px) em(16px) !default;
 // Calendar Picker
-$cal-picker-arrow-color: $off-black;
-$cal-picker-arrow-hover-color: $black;
-$cal-picker-date-fs: em(18px);
-$cal-picker-date-lh: em(22px);
-$cal-picker-date-fw: 600;
-$cal-picker-padding: 24px;
+$cal-picker-arrow-color: $off-black !default;
+$cal-picker-arrow-hover-color: $cal-theme-color !default;
+$cal-picker-date-fs: em(18px, 16px) !default;
+$cal-picker-date-lh: em(22px, 16px) !default;
+$cal-picker-date-fw: 600 !default;
+$cal-picker-padding: em(24px, 16px) !default;
 // Calendar Values
-$cal-value-w: (40px);
+$cal-value-w: em(40px, 16px) !default;
 $cal-value-h: $cal-value-w;
 $cal-valu-br: $cal-value-w / 2;
-$cal-value-margin: 2px;
-$cal-value-fs: em(16px);
-$cal-value-lh: em(22px);
-$cal-value-fw: 600;
-$cal-value-text-color: $black;
-$cal-value-inactive-color: $disabled-color;
-$cal-value-selected-text-color: $white;
-$cal-value-selected-bg: $cal-theme-color;
-$cal-value-current: $cal-theme-color;
-$cal-value-weekend: $disabled-color;
-$cal-value-hover-bg: transparentize($disabled-color, .85);
+$cal-value-margin: em(2px, 16px) !default;
+$cal-value-fs: em(16px, 16px) !default;
+$cal-value-lh: em(22px, 16px) !default;
+$cal-value-fw: 600 !default;
+$cal-value-text-color: $black !default;
+$cal-value-inactive-color: $disabled-color !default;
+$cal-value-selected-text-color: text-contrast($cal-theme-color) !default;
+$cal-value-selected-bg: $cal-theme-color !default;
+$cal-value-current: $cal-theme-color !default;
+$cal-value-weekend: $disabled-color !default;
+$cal-value-hover-bg: transparentize($disabled-color, .85) !default;
 // Calendar Body
-$cal-row-padding: 0 16px;
+$cal-row-padding: 0 em(16px, 16px) !default;
 // 9. Fonts //
 $titillium-font-path: 'fonts/titillium/' !default;
 // 10. Forms //
